--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,12 @@
 # Site settings
-title: 逆风{iOS}
+title: 逆风@{iOS}
 email: dehengxu@outlook.com
 description: > # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
 baseurl: "/ios_tech_jekyll" # the subpath of your site, e.g. /blog/
-url: "http://www.dehengxu.com" # the base hostname & protocol for your site
+url: "http://xudeheng.github.io" # the base hostname & protocol for your site
 twitter_username: dehengxu
 github_username:  xudeheng
 timezone: Asia/Chongqing
