--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ description: > # this means to ignore newlines until "baseurl:"
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
 baseurl: "/ios_tech_jekyll" # the subpath of your site, e.g. /blog/
-url: "http://xudeheng.github.io" # the base hostname & protocol for your site
+url: "http://xudeheng.github.io0" # the base hostname & protocol for your site
 twitter_username: dehengxu
 github_username:  xudeheng
 timezone: Asia/Chongqing
